--- a/templates/formular/layout.html
+++ b/templates/formular/layout.html
@@ -22,7 +22,7 @@ Basic layout of the "Formular" app
   <body>
     <div class="container-fluid form-step">
       <div class="page-header">
-          <h1>HPC Computing Platform: Production Project Request</h1>
+          <h1>Computing Platform: <br />Project Request</h1>
       </div>
       
     {% block content %}
