--- a/templates/formular/pf7.html
+++ b/templates/formular/pf7.html
@@ -39,9 +39,11 @@ function initOnload(step,callback) {
 	var list = '<option value="0">Whole proposal</option>';
 	var memberList = [];
 	var divs = '';
-	var totalCycle = 0;
-	var totalStorage = 0;
-	var totalTape = 0;
+	var totalRuns = 0;
+	var totalPartition = 0;
+	var totalArte = 0;
+	var totalSize = 0;
+	var totalTime = 0;
 	var totalPM = 0;
 	
 	while (key+'-title' in sessionStorage){
@@ -49,9 +51,11 @@ function initOnload(step,callback) {
 		var date = sessionStorage.getItem(key+'-date');
 		var description = sessionStorage.getItem(key+'-description');
 		var risk = sessionStorage.getItem(key+'-risk');
-		var cycle = parseInt(sessionStorage.getItem(key+'-cycle'));
-		var storage = parseInt(sessionStorage.getItem(key+'-storage'));
-		var tape = parseInt(sessionStorage.getItem(key+'-tape'));
+		var runs = parseInt(sessionStorage.getItem(key+'-type_test_comp_runs'))+parseInt(sessionStorage.getItem(key+'-type_devl_comp_runs'))+parseInt(sessionStorage.getItem(key+'-type_prod_comp_runs'));
+		var partition = parseInt(sessionStorage.getItem(key+'-type_test_comp_partition'))+parseInt(sessionStorage.getItem(key+'-type_devl_comp_partition'))+parseInt(sessionStorage.getItem(key+'-type_prod_comp_partition'));
+		var time = parseInt(sessionStorage.getItem(key+'-type_test_comp_time'))+parseInt(sessionStorage.getItem(key+'-type_devl_comp_time'))+parseInt(sessionStorage.getItem(key+'-type_prod_comp_time'));
+		var size = parseInt(sessionStorage.getItem(key+'-type_test_stor_size'))+parseInt(sessionStorage.getItem(key+'-type_devl_stor_size'))+parseInt(sessionStorage.getItem(key+'-type_prod_stor_size'));
+		var arte = parseInt(sessionStorage.getItem(key+'-type_test_stor_arte'))+parseInt(sessionStorage.getItem(key+'-type_devl_stor_arte'))+parseInt(sessionStorage.getItem(key+'-type_prod_stor_arte'));
 		var memberListDeli = [];
 		var totalPMDeli = 0;
 		
@@ -78,22 +82,27 @@ function initOnload(step,callback) {
 		}
 		
 	
-		var inH ='<div id="'+i+'" style="display:none"><label>Delivrable '+i+' - '+title+'</label><br>';
+		var inH ='<div id="'+i+'"><label>Delivrable '+i+' - '+title+'</label><br>';
 		inH += '<div style="padding-bottom:10px;"><label style="padding-right:120px;">Date</label><label>Description</label> (max. 150 characters)<br />';
 		inH += '<input style="height:21px; width:120px;vertical-align:top" readonly value="'+date+'"><span style="padding-left:28px;"></span><textarea maxlength="150" rows="1" cols="58" readonly>'+description+'</textarea></div><br />';
-		inH += '<div style="padding-bottom:10px;"><label style="padding-right:195px;">Core hours</label><label style="padding-right:158px;">Disk storage(TB)</label><label>Tape storage(TB)</label><br />';
-		inH += '<input type="number" readonly style="width:200px" value="'+cycle+'"><span style="padding-left:60px;"></span><input type="number" readonly style="width:200px" value="'+storage+'"><span style="padding-left:60px;"></span><input type="number" value="'+tape+'" readonly style="width:200px"></div><br />';
 		inH += '<div style="padding-bottom:10px;"><label >Risks</label> (max. 150 characters)<br />';
 		inH += '<textarea readonly maxlength="150" rows="1" cols="100">'+risk+'</textarea></div>';
-		inH += '<div><label style="padding-right:175px;">Member</label><label style="padding-right:53px;">Person/Month Total</label><br /></div><div>'
-    
+		inH += '<div style="padding-bottom:10px;"><label style="padding-right:142px;">Total number of runs</label><label style="padding-right:135px;">Average partition size</label><label>Time to solution (In hours)</label><br />';
+		inH += '<input type="number" readonly style="width:200px" value="'+runs+'"><span style="padding-left:60px;"></span><input type="number" readonly style="width:200px" value="'+partition+'"><span style="padding-left:60px;"></span><input type="number" value="'+time+'" readonly style="width:200px"></div><br />';
+		inH += '<div style="padding-bottom:10px;"><label style="padding-right:145px;">Number of artefacts</label><label>Average size of artefacts (in GB)</label><br />';
+		inH += '<input type="number" readonly style="width:200px" value="'+arte+'"><span style="padding-left:60px;"></span><input type="number" readonly style="width:200px" value="'+size+'"><br />';
+		
+		inH += '<div style="padding-top:20px"><label style="padding-right:175px;">Member</label><label style="padding-right:53px;">Person/Month Total</label><br /></div><div>'
+	
     	for(var keyName in memberListDeli){
     		inH += '<input readonly style="width:180px" value="'+keyName+'"><span style="padding-left:40px;"><input readonly type="number" value="'+memberListDeli[keyName]+'" style="width:100px"><br />';
     	}
     	
-		totalCycle += cycle;
-		totalStorage += storage;
-		totalTape += tape;
+		totalRuns += runs;
+		totalPartition += partition;
+		totalTime += time;
+		totalArte += arte;
+		totalSize += size;
 		totalPM += totalPMDeli;
     	
     	document.getElementById('info').innerHTML += inH+'</div><br /><hr /></div>';
@@ -104,16 +113,18 @@ function initOnload(step,callback) {
     var inHTotal ='<div id="0"><label>'+sessionStorage.getItem('1-id_form_0-project_title')+'</label><br>';
 	inHTotal += '<div style="padding-bottom:10px;"><label style="padding-right:95px;">Start Date</label><label style="padding-right:95px;"> End Date</label><br />';
 	inHTotal += '<input style="height:21px; width:120px;vertical-align:top" readonly value="'+date+'"><span style="padding-left:28px;"></span><input style="height:21px; width:120px;vertical-align:top" readonly value="'+date+'"></div><br />';
-	inHTotal += '<div style="padding-bottom:10px;"><label style="padding-right:195px;">Core hours</label><label style="padding-right:158px;">Disk storage(TB)</label><label>Tape storage(TB)</label><br />';
-	inHTotal += '<input type="number" readonly style="width:200px" value="'+totalCycle+'"><span style="padding-left:60px;"></span><input type="number" readonly style="width:200px" value="'+totalStorage+'"><span style="padding-left:60px;"></span><input type="number" value="'+totalTape+'" readonly style="width:200px"></div><br />';
-	inHTotal += '<div><label style="padding-right:175px;">Member</label><label style="padding-right:53px;">Person/Month Total</label><br /></div><div>'
+	inHTotal += '<div style="padding-bottom:10px;"><label style="padding-right:142px;">Total number of runs</label><label style="padding-right:135px;">Average partition size</label><label>Time to solution (In hours)</label><br />';
+	inHTotal += '<input type="number" readonly style="width:200px" value="'+totalRuns+'"><span style="padding-left:60px;"></span><input type="number" readonly style="width:200px" value="'+totalPartition+'"><span style="padding-left:60px;"></span><input type="number" value="'+totalTime+'" readonly style="width:200px"></div><br />';
+	inHTotal += '<div style="padding-bottom:10px;"><label style="padding-right:145px;">Number of artefacts</label><label>Average size of artefacts (in GB)</label><br />';
+	inHTotal += '<input type="number" readonly style="width:200px" value="'+totalArte+'"><span style="padding-left:60px;"></span><input type="number" readonly style="width:200px" value="'+totalSize+'"><br />';
+	inHTotal += '<div style="padding-top:20px"><label style="padding-right:175px;">Member</label><label style="padding-right:53px;">Person/Month Total</label><br /></div><div>'
 	 
     for(var keyName in memberList){
     	inHTotal += '<input readonly style="width:180px" value="'+keyName+'"><span style="padding-left:40px;"><input readonly type="number" value="'+memberList[keyName]+'" style="width:100px"><br />';
     }	
 
 
-    document.getElementById('info').innerHTML = inHTotal+'</div><br /><hr /></div>'+document.getElementById('info').innerHTML;
+    document.getElementById('info').innerHTML = inHTotal+'</div></div><br /><hr /></div>'+document.getElementById('info').innerHTML;
     document.getElementById('choice').innerHTML = '<select id="selectChoice" style="width:730px" onchange="changeFocus()">'+list+'</select>';
     callback.call();
 }
