--- a/templates/formular/pf7.html
+++ b/templates/formular/pf7.html
@@ -82,7 +82,7 @@ function initOnload(step,callback) {
 		}
 		
 	
-		var inH ='<div id="'+i+'"><label>Delivrable '+i+' - '+title+'</label><br>';
+		var inH ='<div id="'+i+'" style="display:none"><label>Delivrable '+i+' - '+title+'</label><br>';
 		inH += '<div style="padding-bottom:10px;"><label style="padding-right:120px;">Date</label><label>Description</label> (max. 150 characters)<br />';
 		inH += '<input style="height:21px; width:120px;vertical-align:top" readonly value="'+date+'"><span style="padding-left:28px;"></span><textarea maxlength="150" rows="1" cols="58" readonly>'+description+'</textarea></div><br />';
 		inH += '<div style="padding-bottom:10px;"><label >Risks</label> (max. 150 characters)<br />';
