Delivrable to Deliverable

--- a/templates/formular/pf6.html
+++ b/templates/formular/pf6.html
@@ -346,7 +346,7 @@ function addMore(where){
 	    	document.getElementById('id_form_delivrable_'+form_idx+'-dependency').innerHTML = document.getElementById('id_form_delivrable_1-dependency').innerHTML;
 	    }
 	    
-	    updateDependency(0,'Delivrable '+form_idx);
+	    updateDependency(0,'Deliverable '+form_idx);
 		
 		addMore('delivrable_'+form_idx+'-HR');
 	}
